# files-to-prompt

./: Cargo.toml  Readme.md
.github/workflows/: publish.yml  test.yml
runtest/: x.txt
src/: cli.rs  lib.rs  main.rs
tests/: test_files_to_prompt.rs
